src/components/Login/Login.css
:root {
  --loginFormWidth: 400px;
  --loginFormHeight: 500px;
}

.form__group {
  position: relative;
  padding: 15px 0 0;
  margin-top: 10px;
  width: 100%;
}

.backImg {
  opacity: 0.5;
  height: 50px;
  width: 50px;
  border-radius: 50px;
  transition: all 0.5s;
}
.backImg:hover {
  box-shadow: 1px 01px 10px rgba(0, 0, 0, 0.8);
}
.backButton:hover {
}
.navContainer {
  text-align: left;
  font-size: 18px;
  margin-left: -20px;
  font-family: "Trebuchet MS", sans-serif;
  left: -100px;
  width: 50px;
  height: 50px;
}
.backButton {
  transition: all 0.5s;
  text-align: left;
  position: relative;
  /* background: red; */
  /* border-radius: 50px; */
  left: 10px;
  top: 10px;
}
.form__field {
  font-family: inherit;
  width: 100%;
  border: 0;
  border-bottom: 2px solid #9b9b9b;
  outline: 0;
  font-size: 1rem;
  color: #000;
  padding: 7px 0;
  background: transparent;
  transition: border-color 0.2s;
}
.form__field::placeholder {
  color: transparent;
}
.form__field:placeholder-shown ~ .form__label {
  font-size: 1.3rem;
  cursor: text;
  top: 20px;
}

.form__label {
  position: absolute;
  top: 0;
  display: block;
  transition: 0.2s;
  font-size: 1rem;
  color: #868686;
}

.form__field:focus {
  padding-bottom: 6px;
  font-weight: 700;
  border-width: 3px;
  border-image: linear-gradient(to right, #11998e, #38ef7d);
  border-image-slice: 1;
}
.form__field:focus ~ .form__label {
  position: absolute;
  top: 0;
  display: block;
  transition: 0.2s;
  font-size: 1rem;
  color: #11998e;
  font-weight: 700;
}

/* reset input */
.form__field:required,
.form__field:invalid {
  box-shadow: none;
}

* {
  text-align: center;
}

/*
.loginForm {
  margin: auto;
  width: 30%;
  border: 10px solid #2181ad;
  border-radius: 25px;
  padding: 10px;
}*/
input[type="text"] {
  text-align: left;
}

input[type="password"] {
  text-align: left;
}

html {
  background-image: url("hip-square.png");
  background-repeat: repeat;
}

body,
html,
#root,
.container {
  width: 100%;
  height: 100%;
}

.app {
  width: 100%;
  height: 100%;
  /* background-color: green; */
}
body {
  background-image: url(hip-square.png);
  background-repeat: repeat;
}
.forgotpass {
  font-size: 20px;
  /* margin-top: 10px; */
  min-height: 26px;
  transition: all 0.25s;

  /* line-height: 10px; */
}
.forgotpass:hover {
  transform: scale(1.1);
}
.forgotContainer {
  color: slategray;
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  /* justify-content: center; */
  width: 100%;
  height: 100%;
}
.emailInput {
  width: 100%;
  /* height:100%; */
}

.loginForm1 h2 {
  text-align: center;
}
.container {
  white-space: nowrap;

  font-size: 28px;
  color: slategray;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* background-color: #282c34; */
}
.loginFormContainer {
  font-family: "Poppins", sans-serif;
  margin: 0;
  transition: all 0.5s;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  width: 100%;
  max-width: var(--loginFormWidth);
  height: var(--loginFormHeight);
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-top: 0px;
  background-color: #f3e9dd;
  /* background-color: #2baed642; */
  border: 15px solid rgba(0, 0, 0, 0.05);
  /* border: 15px solid #DAB88B; */
  border-radius: 20px;
  /* transition: font-size .25s; */
  /* transition: min-height .5s; */
}
.RegisterFormContainerStudent {
  font-family: "Poppins", sans-serif;
  margin: 0;
  transition: all 0.5s;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  width: 100%;
  max-width: var(--loginFormWidth);
  height: 470px;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 50px;
  padding-top: 0px;
  background-color: #f3e9dd;
  /* background-color: #2baed642; */
  border: 15px solid rgba(0, 0, 0, 0.05);
  /* border: 15px solid #DAB88B; */
  border-radius: 20px;
  /* transition: font-size .25s; */
  /* transition: min-height .5s; */
}
.RegisterFormContainerStaff {
  font-family: "Poppins", sans-serif;
  margin: 0;
  transition: all 0.5s;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  width: 100%;
  max-width: var(--loginFormWidth);
  height: var(--loginFormHeight);
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 50px;
  padding-top: 0px;
  background-color: #f3e9dd;
  /* background-color: #2baed642; */
  border: 15px solid rgba(0, 0, 0, 0.05);
  /* border: 15px solid #DAB88B; */
  border-radius: 20px;
  /* transition: font-size .25s; */
  /* transition: min-height .5s; */
}
.loginForm {
  /* background-color: red; */
  transition: all 0.5s;
  background-color: #f3e9dd;
}

/*
  background-color: #68c9e742;
  */
.inputField {
  color: #292929;

  padding-top: 16px;
  padding-bottom: 16px;
}

.inputField2 {
  color: #292929;
  padding-top: 16px;
}

.registerLink {
  margin: 10px;
  transition: all 0.25s ease;
  font-size: 20px;
  /* line-height: 50px; */
  /* min-height: 26px; */
}

.registerLink:hover {
  transform: scale(1.1);
}

.register {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.input {
  box-sizing: border-box;
  outline: none;
  border: solid 2px #1189de;
  border-radius: 4px;
  color: #292929;
  width: 100%;
  padding: 12px;
  font-size: 14px;
  background: white;
}
.buttonsRegister {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* background-color: red; */
}
.input2 {
  box-sizing: border-box;
  outline: none;
  border: solid 2px #1189de;
  border-radius: 4px;
  color: #292929;
  width: 100%;
  padding: 12px;
  font-size: 14px;
  background: white;
}

#userInput {
  border-radius: 20px 20px 4px 4px;
}

.submitButton {
  padding-top: 16px;
}
h4 {
  /* font-family: "Trebuchet MS", sans-serif; */
  font-size: 24px;
}
h2 {
  font-size: 42px;
  font-family: "Trebuchet MS", sans-serif;
  line-height: 42px;
}

.titleText {
  font-size: 42px;
  font-family: "Trebuchet MS", sans-serif;
  line-height: 42px;
  font-weight: bolder;
}
.btn {
  width: 100%;
  min-width: 280px;
  color: #565656;
  padding: 12px;
  font-size: 14px;
  font-weight: bold;
  border: solid 2px rgba(0, 0, 0, 0.05);
  border-radius: 4px;
  margin-top: 16px;
  /* background: #fff; */
  background: #dab88b;
  cursor: pointer;
}
.btn2 {
  width: 100%;
  min-width: 280px;
  color: #565656;
  padding: 12px;
  font-size: 14px;
  font-weight: bold;
  border: solid 2px rgba(0, 0, 0, 0.05);
  border-radius: 4px;
  margin-top: 16px;
  /* background: #fff; */
  background: #dab88b;
  cursor: pointer;
}

a {
  transition: text-shadow 0.5s ease;
  color: #4f89bb;
  text-decoration: none;
  /* transition: all .25s ease-out; */
}
a:visited {
  color: #4f89bb;

  /* color: #121212; */
}
a:hover {
  /* color: #121212; */
  /* font-size: .8em; */
  /* font-size: 21px; */
  /* padding: 0px; */
  /* Transform: scale(1.2px); */
  text-shadow: 0px 0px 25px #6e6861;
  /* text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
  /* text-shadow: 0 2px 2px #dfdfdf, 
      -2px 5px 1px #b8b8b8, 
      -4px 8px 0px #979797, 
      -6px 11px 0px #747474,
      -8px 14px 0px #565656,
      -10px 17px 0px #343434,
      -12px 20px 0px #171717,
      -14px 23px 0px #000; */

  /* text-shadow: 2px 7px 5px rgba(0,0,0,0.3),  */
  /* 0px -4px 10px rgba(255,255,255,0.3); */
  /* text-shadow: 2px 2px 5px slategray; */
}
/*# sourceMappingURL=Login.css.map */

